--- a/Contrib.PinterestButtons/Views/EditorTemplates/Parts/PinItButton.cshtml
+++ b/Contrib.PinterestButtons/Views/EditorTemplates/Parts/PinItButton.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Contrib.PinterestButtons.Models.PinItButtonPart
 @{
+    Script.Require("PinItButtonEditor");
+        
     var dropDownList = new[] {
         new SelectListItem {Text = "Above", Value = "above", Selected = Model.PinCount == "above"},
         new SelectListItem {Text = "Beside", Value = "beside", Selected = Model.PinCount == "beside"},
@@ -25,26 +27,26 @@
         @Html.ValidationMessageFor(model => model.AnyImage)
     </div>
     
-    <div class="editor-label">
+    <div class="editor-label editor-pintitbutton-anyimage">
         @Html.LabelFor(model => model.Url)
     </div>
-    <div class="editor-field">
+    <div class="editor-field editor-pintitbutton-anyimage">
         @Html.TextBoxFor(model => model.Url)
         @Html.ValidationMessageFor(model => model.Url)
     </div>
     
-    <div class="editor-label">
+    <div class="editor-label editor-pintitbutton-anyimage">
         @Html.LabelFor(model => model.Image)
     </div>
-    <div class="editor-field">
+    <div class="editor-field editor-pintitbutton-anyimage">
         @Html.TextBoxFor(model => model.Image)
         @Html.ValidationMessageFor(model => model.Image)
     </div>
     
-    <div class="editor-label">
+    <div class="editor-label editor-pintitbutton-anyimage">
         @Html.LabelFor(model => model.Description)
     </div>
-    <div class="editor-field">
+    <div class="editor-field editor-pintitbutton-anyimage">
         @Html.TextBoxFor(model => model.Description)
         @Html.ValidationMessageFor(model => model.Description)
     </div>
