Added Pinterest Follow Button; Added pinit.js locally to resolve js error

--- a/Contrib.PinterestButtons/Views/EditorTemplates/Parts/PinterestPinItButton.cshtml
+++ b/Contrib.PinterestButtons/Views/EditorTemplates/Parts/PinterestPinItButton.cshtml
@@ -1,4 +1,4 @@
-﻿@model Contrib.PinterestButtons.Models.PinItButtonPart
+﻿@model Contrib.PinterestButtons.Models.PinterestPinItButtonPart
 @{
     Script.Require("PinItButtonEditor");
         
@@ -9,7 +9,7 @@
     };
 }
 <fieldset>
-    <legend>Pin it Fields</legend>
+    <legend>Pinterest Pinit Button Fields</legend>
 
     <div class="editor-label">
         @Html.LabelFor(model => model.PinCount)
